--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,19 +27,34 @@ android {
     dataBinding {
         enabled = true
     }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
     kapt 'com.android.databinding:compiler:2.3.3'
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.0.2'
     implementation 'com.android.support:design:26.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    testCompile 'de.jodamob.kotlin:kotlin-runner-junit4:0.3.1'
     testCompile 'org.mockito:mockito-core:2.9.0'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
+    testCompile "org.robolectric:robolectric:3.4.2"
+    testCompile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    testCompile('org.jetbrains.spek:spek-api:1.1.4') {
+        exclude group: 'org.jetbrains.kotlin'
+    }
+    testRuntimeOnly('org.jetbrains.spek:spek-junit-platform-engine:1.1.4') {
+        exclude group: 'org.junit.platform'
+        exclude group: 'org.jetbrains.kotlin'
+    }
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
 }
