--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,8 @@ org.gradle.jvmargs=-Xmx1536m
 
 artifactory_username=pattadon
 artifactory_password=AP6pL7SMQ8jhmnC3aPuykCT7Mvq
+
+android.enableAapt2=false
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
